自定义过滤器

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+#\u670D\u52A1\u5668\u7AEF\u53E3
+server.port=8080
+#log\u914D\u7F6E\uFF0C\u914D\u7F6E\u8F93\u51FA\u7684\u5730\u5740\u548C\u8F93\u51FA\u7EA7\u522B
+logging.path=D:/log
+logging.level.com.favorites=DEBUG
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
