--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,34 @@
 #\u670D\u52A1\u5668\u7AEF\u53E3
 server.port=8080
+#\u6570\u636E\u5E93\u914D\u7F6E
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=root
+spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#jpa\u914D\u7F6E
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql= true
 #log\u914D\u7F6E\uFF0C\u914D\u7F6E\u8F93\u51FA\u7684\u5730\u5740\u548C\u8F93\u51FA\u7EA7\u522B
 logging.path=D:/log
 logging.level.com.favorites=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
+
+#Loading class `com.mysql.jdbc.Driver'. This is deprecated. The new driver class is `com.mysql.cj.jdbc.Driver'.
+#The driver is automatically registered via the SPI and manual loading of the driver class is generally unnecessary.
+# \u56E0\u4E3A\u4EE5\u4E0A\u63D0\u793A
+# \u5220\u9664spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# \u6216\u8005\u53D8\u66F4spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#\u3010spring.jpa.properties.hibernate.hbm2ddl.auto\u3011
+# \u53C2\u6570\u7684\u4F5C\u7528\u4E3B\u8981\u7528\u4E8E\uFF1A\u81EA\u52A8\u521B\u5EFA	\u66F4\u65B0	\u9A8C\u8BC1\u6570\u636E\u5E93\u8868\u7ED3\u6784,\u6709\u56DB\u4E2A\u503C
+# create\uFF1A \u6BCF\u6B21\u52A0\u8F7D hibernate \u65F6\u90FD\u4F1A\u5220\u9664\u4E0A\u4E00\u6B21\u7684\u751F\u6210\u7684\u8868\uFF0C\u7136\u540E\u6839\u636E\u4F60\u7684 model \u7C7B\u518D\u91CD\u65B0\u6765\u751F\u6210\u65B0\u8868\uFF0C\u54EA\u6015\u4E24\u6B21\u6CA1\u6709\u4EFB\u4F55\u6539\u53D8\u4E5F\u8981\u8FD9\u6837\u6267\u884C\uFF0C\u8FD9\u5C31\u662F\u5BFC\u81F4\u6570\u636E\u5E93\u8868\u6570\u636E\u4E22\u5931\u7684\u4E00\u4E2A\u91CD\u8981\u539F\u56E0\u3002
+# create-drop \uFF1A\u6BCF\u6B21\u52A0\u8F7D hibernate \u65F6\u6839\u636E model \u7C7B\u751F\u6210\u8868\uFF0C\u4F46\u662F sessionFactory \u4E00\u5173\u95ED,\u8868\u5C31\u81EA\u52A8\u5220\u9664\u3002
+# update\uFF1A\u6700\u5E38\u7528\u7684\u5C5E\u6027\uFF0C\u7B2C\u4E00\u6B21\u52A0\u8F7D hibernate \u65F6\u6839\u636E model \u7C7B\u4F1A\u81EA\u52A8\u5EFA\u7ACB\u8D77\u8868\u7684\u7ED3\u6784\uFF08\u524D\u63D0\u662F\u5148\u5EFA\u7ACB\u597D\u6570\u636E\u5E93\uFF09\uFF0C\u4EE5\u540E\u52A0\u8F7D hibernate \u65F6\u6839\u636E model \u7C7B\u81EA\u52A8\u66F4\u65B0\u8868\u7ED3\u6784\uFF0C\u5373\u4F7F\u8868\u7ED3\u6784\u6539\u53D8\u4E86\u4F46\u8868\u4E2D\u7684\u884C\u4ECD\u7136\u5B58\u5728\u4E0D\u4F1A\u5220\u9664\u4EE5\u524D\u7684\u884C\u3002\u8981\u6CE8\u610F\u7684\u662F\u5F53\u90E8\u7F72\u5230\u670D\u52A1\u5668\u540E\uFF0C\u8868\u7ED3\u6784\u662F\u4E0D\u4F1A\u88AB\u9A6C\u4E0A\u5EFA\u7ACB\u8D77\u6765\u7684\uFF0C\u662F\u8981\u7B49 \u5E94\u7528\u7B2C\u4E00\u6B21\u8FD0\u884C\u8D77\u6765\u540E\u624D\u4F1A\u3002
+# validate \uFF1A\u6BCF\u6B21\u52A0\u8F7D hibernate \u65F6\uFF0C\u9A8C\u8BC1\u521B\u5EFA\u6570\u636E\u5E93\u8868\u7ED3\u6784\uFF0C\u53EA\u4F1A\u548C\u6570\u636E\u5E93\u4E2D\u7684\u8868\u8FDB\u884C\u6BD4\u8F83\uFF0C\u4E0D\u4F1A\u521B\u5EFA\u65B0\u8868\uFF0C\u4F46\u662F\u4F1A\u63D2\u5165\u65B0\u503C\u3002
+
+#\u3010spring.jpa.properties.hibernate.dialect\u3011
+# \u4E3B\u8981\u662F\u6307\u5B9A\u751F\u6210\u8868\u540D\u7684\u5B58\u50A8\u5F15\u64CE\u4E3A InnoDBD
+#\u3010spring.jpa.show-sql\u3011
+# \u662F\u5426\u6253\u5370\u51FA\u81EA\u52A8\u751F\u6210\u7684 SQL\uFF0C\u65B9\u4FBF\u8C03\u8BD5\u7684\u65F6\u5019\u67E5\u770B
