--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,30 @@
 #\u670D\u52A1\u5668\u7AEF\u53E3
 server.port=8080
+
 #\u6570\u636E\u5E93\u914D\u7F6E
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=123456
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 #jpa\u914D\u7F6E
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql= true
+
+#thymeleaf\u914D\u7F6E\uFF08 \u5B8C\u6574\u914D\u7F6E\u9879\u53C2\u8003 ThymeleafProperties.java\uFF09
+#spring.thymeleaf.mode\u7684\u9ED8\u8BA4\u503C\u662FHTML5\uFF0C\u5176\u5B9E\u662F\u4E00\u4E2A\u5F88\u4E25\u683C\u7684\u68C0\u67E5\uFF0C\u6539\u4E3A LEGACYHTML5 \u53EF\u4EE5\u5F97\u5230\u4E00\u4E2A\u53EF\u80FD\u66F4\u53CB\u597D\u4EB2\u5207\u7684\u683C\u5F0F\u8981\u6C42\uFF08LEGACYHTML5\u9700\u8981\u642D\u914D\u4E00\u4E2A\u989D\u5916\u7684\u5E93NekoHTML\u624D\u53EF\u7528\uFF09
+#\u3010spring.thymeleaf.mode=HTML5\u3011\u5BF9.html\u7684\u5185\u5BB9\u8981\u6C42\u5F88\u4E25\u683C\uFF0C\u6BD4\u5982<meta charset="UTF-8" />\uFF0C
+#\u5982\u679C\u5C11\u6700\u540E\u7684\u6807\u7B7E\u5C01\u95ED\u7B26\u53F7/\uFF0C\u5C31\u4F1A\u62A5\u9519\u800C\u8F6C\u5230\u9519\u8BEF\u9875\u3002\u4E5F\u6BD4\u5982\u4F60\u5728\u4F7F\u7528Vue.js\u8FD9\u6837\u7684\u5E93\uFF0C\u7136\u540E\u6709<div v-cloak></div>\u8FD9\u6837\u7684html\u4EE3\u7801\uFF0C
+#\u4E5F\u4F1A\u88ABthymeleaf\u8BA4\u4E3A\u4E0D\u7B26\u5408\u8981\u6C42\u800C\u629B\u51FA\u9519\u8BEF
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.servlet.content-type=text/html
+#\u5F00\u53D1\u65F6\u5173\u95ED\u7F13\u5B58,\u4E0D\u7136\u6CA1\u6CD5\u770B\u5230\u5B9E\u65F6\u9875\u9762
+spring.thymeleaf.cache=false
+
 #log\u914D\u7F6E\uFF0C\u914D\u7F6E\u8F93\u51FA\u7684\u5730\u5740\u548C\u8F93\u51FA\u7EA7\u522B
 logging.path=D:/log
 logging.level.com.favorites=DEBUG
