--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,9 @@ logging.level.com.favorites=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
 
+#\u4E2D\u6587\u4E71\u7801
+spring.http.encoding.charset=UTF-8
+
 #Loading class `com.mysql.jdbc.Driver'. This is deprecated. The new driver class is `com.mysql.cj.jdbc.Driver'.
 #The driver is automatically registered via the SPI and manual loading of the driver class is generally unnecessary.
 # \u56E0\u4E3A\u4EE5\u4E0A\u63D0\u793A
