--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!--	thymeleaf	-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -44,16 +45,6 @@
 			<groupId>net.sourceforge.nekohtml</groupId>
 			<artifactId>nekohtml</artifactId>
 		</dependency>
-		<!--
-            热部署，该模块在完整的打包环境下运行的时候会被禁用。
-            如果你使用java -jar启动应用或者用一个特定的classloader启动，
-            它会认为这是一个“生产环境”
-        -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <optional>true</optional>
-        </dependency>
 		<!-- jpa	-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -67,6 +58,16 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+		</dependency>
+		<!--
+			热部署，该模块在完整的打包环境下运行的时候会被禁用。
+			如果你使用java -jar启动应用或者用一个特定的classloader启动，
+			它会认为这是一个“生产环境”
+		-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
 		</dependency>
 
 	</dependencies>
