--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,6 +60,13 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=sannian
 spring.rabbitmq.password=sannian
 
+#\u90AE\u4EF6\u914D\u7F6E
+spring.mail.host=smtp.163.com
+spring.mail.username=yujiejobs@163.com
+#\u6388\u6743\u7801\u800C\u4E0D\u662F\u5BC6\u7801
+spring.mail.password=yujie123
+spring.mail.default-encoding=UTF-8
+mail.fromMail.addr=yujiejobs@163.com
 
 #log\u914D\u7F6E\uFF0C\u914D\u7F6E\u8F93\u51FA\u7684\u5730\u5740\u548C\u8F93\u51FA\u7EA7\u522B
 logging.path=D:/log
