--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,9 @@ spring.datasource.db2.username=root
 spring.datasource.db2.password=123456
 spring.datasource.db2.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#mongodb
+spring.data.mongodb.uri=mongodb://localhost:27017/test
+
 #jpa\u914D\u7F6E
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
