--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,21 +2,21 @@
 server.port=8080
 
 #\u6570\u636E\u5E93\u914D\u7F6E
-#spring.datasource.url=jdbc:mysql://localhost:3306/test
-#spring.datasource.username=root
-#spring.datasource.password=123456
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #\u591A\u6570\u636E\u6E90\u914D\u7F6E
-spring.datasource.db1.jdbc-url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
-spring.datasource.db1.username=root
-spring.datasource.db1.password=123456
-spring.datasource.db1.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.datasource.db2.jdbc-url=jdbc:mysql://localhost:3306/test1?1serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
-spring.datasource.db2.username=root
-spring.datasource.db2.password=123456
-spring.datasource.db2.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.db1.jdbc-url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+#spring.datasource.db1.username=root
+#spring.datasource.db1.password=123456
+#spring.datasource.db1.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#spring.datasource.db2.jdbc-url=jdbc:mysql://localhost:3306/test1?1serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+#spring.datasource.db2.username=root
+#spring.datasource.db2.password=123456
+#spring.datasource.db2.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #mongodb
 spring.data.mongodb.uri=mongodb://localhost:27017/test
