--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,6 +71,9 @@ spring.mail.password=yujie123
 spring.mail.default-encoding=UTF-8
 mail.fromMail.addr=yujiejobs@163.com
 
+#swagger
+swagger.enabled=true
+
 #log\u914D\u7F6E\uFF0C\u914D\u7F6E\u8F93\u51FA\u7684\u5730\u5740\u548C\u8F93\u51FA\u7EA7\u522B
 logging.path=D:/log
 logging.level.com.favorites=DEBUG
