切面/方法耗时

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -79,6 +79,7 @@ logging.path=D:/log
 logging.level.com.favorites=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 #\u4E2D\u6587\u4E71\u7801
 spring.http.encoding.charset=UTF-8
