--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.soft</groupId>
-    <artifactId>spring_boot_init</artifactId>
+    <artifactId>spring_boot_demos</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>spring_boot_init</name>
+    <name>spring_boot_demos</name>
     <url>https://www.yujiejobs.top</url>
 
     <properties>
@@ -18,18 +18,18 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring.boot.version>2.4.5</spring.boot.version>
+        <spring.boot.version>2.6.2</spring.boot.version>
         <mysql.version>8.0.12</mysql.version>
         <hutool.version>5.6.4</hutool.version>
         <guava.version>30.1.1-jre</guava.version>
     </properties>
 
     <modules>
+        <module>spring_boot_0_design</module>
         <module>spring_boot_1_init</module>
-        <module>guave</module>
-        <module>hutools</module>
-        <module>redisson</module>
-        <module>demo</module>
+        <module>spring_boot_2_hutool</module>
+        <module>spring_boot_3_redisson</module>
+        <module>spring_boot_4_mq</module>
     </modules>
 
     <dependencies>
@@ -37,6 +37,17 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <!-- hutool工具类 -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
     </dependencies>
 
