--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring.boot.version>2.6.2</spring.boot.version>
         <mysql.version>8.0.12</mysql.version>
-        <hutool.version>5.6.4</hutool.version>
-        <guava.version>30.1.1-jre</guava.version>
+        <hutool.version>5.8.1</hutool.version>
+        <guava.version>31.1-jre</guava.version>
     </properties>
 
     <modules>
@@ -30,6 +30,7 @@
         <module>spring_boot_2_hutool</module>
         <module>spring_boot_3_redisson</module>
         <module>spring_boot_4_mq</module>
+        <module>spring_boot_5_guava</module>
     </modules>
 
     <dependencies>
