--- a/spring_boot_2_hutool/pom.xml
+++ b/spring_boot_2_hutool/pom.xml
@@ -12,6 +12,8 @@
     <name>spring_boot_2_hutool</name>
     <description>spring_boot_2_hutool</description>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
@@ -33,7 +35,7 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>5.0.0</version>
+            <version>5.2.2</version>
         </dependency>
 
     </dependencies>
