--- a/spring_boot_3_redisson/pom.xml
+++ b/spring_boot_3_redisson/pom.xml
@@ -12,6 +12,8 @@
     <name>spring_boot_3_redisson</name>
     <description>spring_boot_3_redisson</description>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
@@ -37,7 +39,7 @@
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
-            <version>3.17.1</version>
+            <version>3.17.3</version>
         </dependency>
     </dependencies>
 
