--- a/spring_boot_6_tlog/pom.xml
+++ b/spring_boot_6_tlog/pom.xml
@@ -12,6 +12,8 @@
     <name>spring_boot_6_tlog</name>
     <description>spring_boot_6_tlog</description>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
