--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>spring_boot_5_guava</module>
         <module>spring_boot_6_tlog</module>
         <module>spring_boot_8_mongodb</module>
+        <module>spring_boot_9_thread</module>
     </modules>
 
     <dependencies>
