--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     </properties>
 
     <modules>
+        <module>spring_boot_0_reflection</module>
         <module>spring_boot_0_design</module>
         <module>spring_boot_1_init</module>
         <module>spring_boot_2_hutool</module>
@@ -35,6 +36,9 @@
         <module>spring_boot_8_mongodb</module>
         <module>spring_boot_9_thread</module>
         <module>spring_boot_10_jvm</module>
+        <module>spring_boot_11_dubbo_provider</module>
+        <module>spring_boot_12_dubbo_consumer</module>
+        <module>spring_boot_13_dubbo_interface</module>
     </modules>
 
     <dependencies>
