--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>spring_boot_9_thread</module>
         <module>spring_boot_10_jvm</module>
         <module>spring_boot_11_dubbo</module>
+        <module>spring_boot_12_collection</module>
     </modules>
 
     <dependencies>
