--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>spring_boot_11_dubbo</module>
         <module>spring_boot_12_collection</module>
         <module>spring_boot_13_docker</module>
+        <module>spring_boot_14_redisson</module>
     </modules>
 
     <dependencies>
