--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>spring_boot_12_collection</module>
         <module>spring_boot_13_docker</module>
         <module>spring_boot_14_redisson</module>
+        <module>spring_boot_15_limit</module>
     </modules>
 
     <dependencies>
