--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <module>spring_boot_13_docker</module>
         <module>spring_boot_14_redisson</module>
         <module>spring_boot_15_limit</module>
+        <module>spring_boot_16_excel</module>
     </modules>
 
     <dependencies>
