--- a/spring_boot_14_redis/pom.xml
+++ b/spring_boot_14_redis/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>spring_boot_demos</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>spring_boot_14_redisson</artifactId>
+    <artifactId>spring_boot_14_redis</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring_boot_14_redisson</name>
     <description>spring_boot_14_redisson</description>
@@ -27,6 +27,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
@@ -35,12 +39,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.redisson/redisson -->
-        <dependency>
-            <groupId>org.redisson</groupId>
-            <artifactId>redisson</artifactId>
-            <version>3.15.5</version>
         </dependency>
 
     </dependencies>
